--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
+  "name": "desafio_llms",
+  "version": "1.0.0",
+  "description": "API para conectar múltiplas LLMs usando Express.js",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "keywords": ["LLM", "API", "AI", "Express", "Node.js"],
+  "author": "Seu Nome",
+  "license": "ISC"
 }
